@@ -165,14 +165,6 @@ __hidden void *MT_mremap(const char *path, int mode, void *old_address, size_t o
 	__attribute__((__visibility__("hidden")));
 __hidden int MT_msync(void *p, size_t len)
 	__attribute__((__visibility__("hidden")));
-__hidden int OIDdirty(void)
-	__attribute__((__visibility__("hidden")));
-__hidden int OIDinit(void)
-	__attribute__((__visibility__("hidden")));
-__hidden oid OIDread(str buf)
-	__attribute__((__visibility__("hidden")));
-__hidden int OIDwrite(FILE *f)
-	__attribute__((__visibility__("hidden")));
 __hidden void OIDXfree(BAT *b)
 	__attribute__((__visibility__("hidden")));
 __hidden gdk_return rangejoin(BAT *r1, BAT *r2, BAT *l, BAT *rl, BAT *rh, BAT *sl, BAT *sr, int li, int hi, BUN maxsize)
