@@ -326,13 +326,6 @@ command ptr(v:ptr) :ptr
 address CMDvarCONVERTptr
 comment "Cast VALUE to ptr";
 
-pattern setoid(v:int) :void
-address CMDsetoid;
-pattern setoid(v:oid) :void
-address CMDsetoid;
-pattern setoid(v:lng) :void
-address CMDsetoid;
-
 pattern ifthenelse(b:bit,t:any_1,f:any_1):any_1
 address CALCswitchbit
 comment "If VALUE is true return MIDDLE else RIGHT";
